--- a/examples/views/logged_in.erb
+++ b/examples/views/logged_in.erb
@@ -13,7 +13,12 @@
 
 <h1>Test page 3</h1>
 <p>Session info:</p>
-<pre><%= Rack::Utils.escape_html(session[:auth_info].inspect) %></pre>
+<pre><%#= Rack::Utils.escape_html(session[:auth_info].inspect) %></pre>
+<pre><%= Rack::Utils.escape_html(session[:auth_info].to_json(
+  indent: '  ',
+  object_nl: "\n",
+  array_nl: "\n",
+)) %></pre>
 
 <p>Token</p>
 <pre><%= Rack::Utils.escape_html(session[:auth_info].credentials.token) %></pre>
